<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="hint">Name</string>
    <string name="subject">JustJava order for <xliff:g example="Amy" id="name">%s</xliff:g></string>

    <!-- Order Summary -->
    <string name="summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="topping">%b</xliff:g></string>
    <string name="summary_chocolate">Add chocolate? <xliff:g example="true" id="topping">%b</xliff:g></string>
    <string name="summary_quantity">Quantity: <xliff:g example="2" id="number">%d</xliff:g></string>
    <string name="summary_total">Total: <xliff:g example="$3" id="order_cost">%s</xliff:g></string>
    <string name="summary_thank_you">Thank you!</string>

    <!-- Toast -->
    <string name="toast_one">You cannot have less than 1 coffee</string>
    <string name="toast_hundred">You cannot have more than 100 coffee</string>
    <string name="toast_no_email_app">Email app not found</string>

    <!-- Toppings -->
    <string name="topping_cream">Whipped cream</string>
    <string name="topping_chocolate">Chocolate</string>

    <!-- Sections -->
    <string name="section_topping">Toppings</string>
    <string name="section_quantity">Quantity</string>

    <!-- Values -->
    <string name="quantity_default" translatable="false">2</string>
    <string name="price_default" translatable="false">₹ 828.00</string>

    <!-- Buttons -->
    <string name="button_order">Order</string>
    <string name="button_plus" translatable="false">+</string>
    <string name="button_minus" translatable="false">-</string>
</resources>