<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".MainActivity">

    <!-- Section - Quantity TextView -->
    <TextView
        style="@style/Section"
        android:text="@string/section_quantity" />

    <!-- Increment Button -->
    <Button
        android:layout_width="@dimen/increment_decrement_size"
        android:layout_height="@dimen/increment_decrement_size"
        android:layout_marginTop="@dimen/margin_default"
        android:onClick="increment"
        android:text="@string/button_plus" />

    <!-- Quantity TextView -->
    <TextView
        android:id="@id/quantity_text_view"
        style="@style/Value"
        android:text="@string/quantity_default" />

    <!-- Decrement Button -->
    <Button
        android:layout_width="@dimen/increment_decrement_size"
        android:layout_height="@dimen/increment_decrement_size"
        android:layout_marginBottom="@dimen/margin_default"
        android:onClick="decrement"
        android:text="@string/button_minus" />

    <!-- Section - Price TextView -->
    <TextView
        style="@style/Section"
        android:text="@string/section_price" />

    <!-- Price TextView -->
    <TextView
        android:id="@id/price_text_view"
        style="@style/Value"
        android:layout_marginVertical="@dimen/margin_default"
        android:text="@string/price_default" />

    <!-- Order Button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/button_order" />
</LinearLayout>